# ArisSubSet

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: docker-image.yml  quality.yml
migrations/: 0000_schema_migrations.sql  0001_baseline.sql  0002_analysis_and_job_indexes.sql  0003_backup_retention.sql  0004_font_face_identity.sql
src/: api.rs  ass.rs  auth.rs  backup.rs  cache.rs  config.rs  db.rs  events.rs  failure_log.rs  font_inspect.rs  font_worker.rs  fs_walk.rs  indexer.rs  main.rs  metrics.rs  models.rs  processor.rs  scanner.rs  sqlx.rs  state.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
workers/: font_worker.py
